--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<h1>leizi.es</h1>
-<h3>coming soon lol</h3>
+<!doctype html>
+
+<!-- you will _never_ figure this out -->
+
+<html>
+<head>
+	<title>leizi.es</title>
+	
+	<style>
+		html { height: 100% }
+		body { height: 100%; background: #000 url(488.png) 50% 50% no-repeat; position: fixed; }
+	</style>
+</head>
+<body>
+</body>
+</html>
